correction pb affichage sur resultat recharche en version mobile

--- a/style.css
+++ b/style.css
@@ -454,3 +454,9 @@ footer {
   background-color: #1c0286;
   height: 25px;
 }
+
+@media all and (max-width: 600px) {
+  .container-search .personnage {
+    width: auto;
+  }
+}
